--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <script src="https://cdn.jsdelivr.net/npm/ethers@6.10.0/dist/ethers.umd.min.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #0f0f0f;
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
+  font-family: Arial, sans-serif;
+  background: radial-gradient(circle at center, #ff7a00 0%, #0f0f0f 60%);
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
     .box {
       text-align: center;
       padding: 30px;
