--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       border-radius: 12px;
       background: #151515;
     }
+    <p style="font-size:12px;opacity:0.7;">
+  Supported wallets: OKX Wallet &amp; MetaMask • Use Citrea Network
+</p>
     button {
       padding: 12px 24px;
       font-size: 16px;
