--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
   <style>
     body {
   font-family: Arial, sans-serif;
-  background: radial-gradient(circle at center, #ff7a00 0%, #0f0f0f 60%);
+  background: 
+    linear-gradient(
+      rgba(0,0,0,0.45),
+      rgba(0,0,0,0.65)
+    ),
+    url("") no-repeat center center fixed;
+  background-size: cover;
   color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   margin: 0;
-}
+    }
     .box {
       text-align: center;
       padding: 30px;
