--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rgba(0,0,0,0.65)
     ),
     url("20260204_005620.jpg") no-repeat center center fixed;
-  background-size: 120%;
+  background-size: contain;
   color: #ffffff;
   display: flex;
   justify-content: center;
