--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
   margin: 0;
     }
     .box {
-      text-align: center;
-      padding: 30px;
-      border: 1px solid #333;
-      border-radius: 12px;
-      background: #151515;
+  text-align: center;
+  padding: 32px;
+  border-radius: 18px;
+  background: rgba(15, 15, 15, 0.85);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  width: 320px;
+  box-shadow: 0 0 40px rgba(255, 122, 0, 0.35);
+  backdrop-filter: blur(6px);
     }
     button {
       padding: 12px 24px;
