--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rgba(0,0,0,0.45),
       rgba(0,0,0,0.65)
     ),
-    url("20260204_005620.jpg") no-repeat center center fixed;
+    url("file_00000000d35871fa884dee824fe0ec9a.png") no-repeat center center fixed;
   background-size: cover;
   color: #ffffff;
   display: flex;
